fix spacing

--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -658,33 +658,38 @@ canvas {
   margin-right: 2rem
 }
 
-.m5 {
-  margin: 2.5rem
-}
-
-.mt5 {
-  margin-top: 2.5rem
-}
-
-.mr5 {
-  margin-right: 2.5rem
-}
-
-.mb5 {
-  margin-bottom: 2.5rem
-}
-
-.ml5, .mx5 {
-  margin-left: 2.5rem
-}
-
-.mx5 {
-  margin-right: 2.5rem
-}
-
 .my4 {
   margin-top: 2rem;
   margin-bottom: 2rem
+}
+
+.m5 {
+  margin: 3.5rem
+}
+
+.mt5 {
+  margin-top: 3.5rem
+}
+
+.mr5 {
+  margin-right: 3.5rem
+}
+
+.mb5 {
+  margin-bottom: 3.5rem
+}
+
+.ml5, .mx5 {
+  margin-left: 3.5rem
+}
+
+.mx5 {
+  margin-right: 3.5rem
+}
+
+.my5 {
+  margin-top: 3.5rem;
+  margin-bottom: 3.5rem
 }
 
 .mxn1 {
@@ -1447,12 +1452,15 @@ main {
       background: #000000d9;
       position: relative;
       overflow: hidden;
+      min-height: 700px;
+      display: flex;
 
       figure{
         background: #000;
         bottom: 0;
         top: 0;
         height: 100%;
+        max-height: 100%;
       }
 
     }
@@ -2357,6 +2365,15 @@ search {
 @media only screen and (max-width: 415px) {
   .banner-container, .banner-background {
     height: 300px;
+  }
+
+  .post-content{
+    margin-right: 1rem;
+    margin-left: 1rem;
+  }
+  .full-width div{
+    margin-right: 0;
+    margin-left: 0;
   }
 }
 
